[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.123.5"}
psycopg = {extras = ["binary"], version = "^3.3.1"}
openai = "^2.8.1"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
numpy = "^2.3.5"
chromadb = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
